--- a/style.css
+++ b/style.css
@@ -1,11 +1,42 @@
+body {
+    font-size: 26px;
+}
+
 .container {
     margin: 0 auto;
-    width: 90%;
+    width: 60%;
+    /*border: 1px solid #333;*/
+}
+
+.filters {
+    display: inline-block;
+    padding: 5px;
+    border: 1px solid #333;
+    text-align: right;
 }
 
 input, select, option {
     padding: 10px;
-    margin: 5px;
+    font-size: 26px!important;
+    margin-bottom: 10px;
+}
+
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+[hidden]{
+  display: none!important;
+}
+
+.products li {
+    margin-bottom: 10px;
+}
+
+.products li:nth-child(odd) {
+    background-color: #eaeaea;
 }
 
 #pagination {
@@ -14,5 +45,6 @@ input, select, option {
 
 #pagination a {
     padding: 5px;
-    margin: 10px;
+    display: inline-block;
 }
+
